--- a/css/style.css
+++ b/css/style.css
@@ -166,8 +166,18 @@ nav {
     color: var(--light);
     padding: 1rem; }
     .vp-content h1 {
+      background: white;
+      border: 2px solid black;
+      padding-left: 1rem;
+      padding-right: 1rem;
       font-size: 4rem;
       margin-bottom: 2rem; }
+      @media (max-width: 480px) {
+        .vp-content h1 {
+          background: none;
+          border: none;
+          padding-right: 0;
+          padding-left: 0; } }
     .vp-content p {
       font-size: 1.8rem;
       font-weight: 700;
