--- a/scss/style.scss
+++ b/scss/style.scss
@@ -82,8 +82,18 @@ nav {
     color:var(--light);
     padding:1rem;
     h1 {
+      background:white;
+      border:2px solid black;
+      padding-left: 1rem;
+      padding-right: 1rem;
       font-size: 4rem;
       margin-bottom: 2rem;
+      @include xs {
+        background: none;
+        border: none;
+        padding-right: 0;
+        padding-left: 0;
+      }
     }
     p {
       font-size: 1.8rem;
