--- a/scss/_classes.scss
+++ b/scss/_classes.scss
@@ -31,6 +31,16 @@
   justify-content: center;
 }
 
+.title-underline3 {
+  font-size: 5.3rem;
+  max-width: 1200px;
+  margin-bottom: 7rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid var(--hint);
+  text-align: left;
+  justify-content: left;
+}
+
 .banniere {
   max-height: 175px;
   width:100%;
