--- a/scss/style.scss
+++ b/scss/style.scss
@@ -137,6 +137,9 @@ nav {
       h2 {
         margin-top: 2rem;
         margin-bottom: 0;
+        @include xs {
+          text-align: center;
+        }
       }
       .article-author {
         color: var(--hint);
