--- a/css/style.css
+++ b/css/style.css
@@ -179,16 +179,13 @@ nav {
     color: var(--light);
     padding: 1rem; }
     .vp-content h1 {
-      background: white;
-      border: 2px solid black;
+      text-shadow: 5px 5px var(--very-light);
       padding-left: 1rem;
       padding-right: 1rem;
       font-size: 4rem;
       margin-bottom: 2rem; }
       @media (max-width: 480px) {
         .vp-content h1 {
-          background: none;
-          border: none;
           padding-right: 0;
           padding-left: 0; } }
     .vp-content p {
