--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,23 @@ nav {
       letter-spacing: 1px;
       line-height: 2rem; }
 
+.spoiler {
+  flex: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: white;
+  padding: 3rem; }
+  .spoiler-content {
+    max-width: 800px;
+    border: 3px solid red;
+    text-align: center;
+    color: red;
+    padding: 2rem; }
+    .spoiler-content h1 {
+      font-size: 4rem; }
+
 .content {
   background: var(--divider);
   display: flex;
