--- a/scss/style.scss
+++ b/scss/style.scss
@@ -107,9 +107,10 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background:white;
+  background:linear-gradient(to bottom, white, var(--background));
   padding: 3rem;
   &-content {
+    background: white;
     max-width:800px;
     border:3px solid red;
     text-align: center;
@@ -159,10 +160,14 @@ nav {
         color: var(--hint);
         margin-bottom: 0rem;
       }
+      .article-date {
+        color:var(--hint);
+        margin-bottom:3rem;
+      }
       .article-content {
         max-width: 550px;
         white-space: pre-line;
-        margin-bottom: 3rem;
+        margin-bottom: 1rem;
       }
     }
   }
@@ -212,6 +217,34 @@ nav {
     @include xs {
       display:flex;
       flex-direction: column;
+    }
+  }
+  &-affiche {
+    margin-top: 17rem;
+    width: 300px;
+    height: 300px;
+    border:3px solid black;
+    border-radius: 1rem;
+    img {
+      border-radius: 0.5rem;
+    }
+    @include xs {
+    
+    }
+  }
+  &-elem2 {
+    display:flex;
+    flex-direction: column;
+    width:30%;
+    height:600px;
+    justify-content: center;
+    align-items: center;
+    @include xs {
+    width:100%;
+    }
+    &-text {
+      padding:2rem;
+      text-align:center;
     }
   }
   &-elem {
