--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -275,7 +276,68 @@ nav {
     .cover a i {
       margin-right: 0.5rem; }
 
-/* all */
+/* PACK */
+.pack {
+  background: var(--very-light);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 0; }
+  .pack .pack-container {
+    max-width: 1000px;
+    width: 100%;
+    margin: 10rem 0 10rem 0;
+    padding-bottom: 0; }
+    .pack .pack-container p {
+      text-align: center;
+      padding-bottom: 2rem;
+      padding-top: 2rem; }
+    .pack .pack-container h2 {
+      text-align: center;
+      font-size: 5rem; }
+      @media (max-width: 480px) {
+        .pack .pack-container h2 {
+          font-size: 4rem; } }
+    .pack .pack-container .starter {
+      background: white;
+      padding: 0 6rem;
+      border-radius: 0.3rem;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 0rem;
+      align-items: center;
+      box-shadow: 0 18px 18px 0 var(--dark), 0 10px 25px 18px var(--light); }
+      .pack .pack-container .starter-list1 {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: center;
+        align-items: center;
+        background: white;
+        padding-top: 3rem; }
+        @media (max-width: 480px) {
+          .pack .pack-container .starter-list1 {
+            flex-direction: column; } }
+      .pack .pack-container .starter-list2 {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: center;
+        align-items: center;
+        background: white;
+        padding-bottom: 3rem; }
+        @media (max-width: 480px) {
+          .pack .pack-container .starter-list2 {
+            flex-direction: column; } }
+      .pack .pack-container .starter-elem {
+        width: 450px;
+        padding-left: 0.4rem; }
+        .pack .pack-container .starter-elem img {
+          border-radius: 0.3rem; }
+        @media (max-width: 480px) {
+          .pack .pack-container .starter-elem {
+            width: 300px; } }
+
+/* affichage fonds d'écrans */
 .appreciate {
   padding: 5rem 1rem 5rem 1rem;
   background: var(--background);
