--- a/scss/style.scss
+++ b/scss/style.scss
@@ -275,6 +275,11 @@ nav {
   padding:5rem 1rem 5rem 1rem;
   background:var(--background);
   border-bottom: 1px solid var(--border);
+  &-banaccueil {
+    display:flex;
+    flex-direction: column;
+    max-width:300px;
+  }
   &-separator {
     margin:1rem auto;
     height:2px;
@@ -284,7 +289,6 @@ nav {
   &-list {
     display:flex;
     flex-flow:row nowrap;
-    justify-content:space-between;
     @include xs {
       display:flex;
       flex-direction: column;
@@ -301,6 +305,44 @@ nav {
     }
     @include xs {
     
+    }
+  }
+  &-banaccueil {
+    display:flex;
+    flex-direction: column;
+    width:50%;
+  }
+  &-elem4 {
+    border:1px solid black;
+    background:white;
+    margin:1rem;
+    flex:1;
+    max-width:300px;
+    margin-left: 2.7rem;
+    &-img {
+      max-width:100%;
+      max-height:600px;
+    }
+    &-text {
+      padding:2rem;
+      text-align:center;
+    }
+  }
+  &-elem3 {
+    border:1px solid black;
+    background:white;
+    margin:1rem;
+    flex:1;
+    width:760px;
+    @include xs {
+      width:330px;
+    }
+    &-img {
+      max-height:600px;
+    }
+    &-text {
+      padding:2rem;
+      text-align:center;
     }
   }
   &-elem2 {
