--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@
   padding-bottom: 2rem;
   border-bottom: 1px solid var(--hint);
   text-align: center;
-  justify-content: center; }
+  justify-content: center;
+  text-shadow: 1px 1px 2px var(--very-light); }
 
 html {
   font-size: 62.5%; }
@@ -709,53 +710,31 @@ footer {
     color: white;
     text-align: center; }
 
-aside .block .social-container {
+.block {
   display: flex;
-  justify-content: start;
-  align-items: center;
-  padding: 1rem 1rem;
-  padding-left: 3rem;
-  font-weight: 300;
-  color: white;
-  border-radius: 5px;
-  transition: all 0.2s;
-  max-width: 200px;
-  cursor: pointer; }
-  @media (max-width: 480px) {
-    aside .block .social-container {
-      text-align: center; } }
-
-aside .block .social-container:hover {
-  background: var(--very-light);
-  font-weight: 700;
-  max-width: 200px; }
-
-aside h2 {
-  padding-left: 5rem;
-  padding-top: 2rem;
-  padding-bottom: 0.8rem;
-  color: white; }
-  @media (max-width: 480px) {
-    aside h2 {
-      text-align: center;
-      padding-left: 0; } }
-
-aside a {
-  color: white; }
-
-aside a:hover {
-  color: var(--dark); }
-
-aside .block .social-container:hover i {
-  color: var(--dark);
-  transform: scale(1.3);
-  transition: 0.3s; }
-
-aside .block .social-container i {
-  font-size: 2rem;
-  flex: 0 0 50px;
-  margin-right: 1rem; }
-
-aside .block .social-container p {
-  flex: auto;
-  margin: 0; }
+  flex-direction: column;
+  text-align: center; }
+  .block-social {
+    display: flex;
+    flex-flow: row nowrap;
+    text-align: center;
+    align-items: center;
+    justify-content: center; }
+    @media (max-width: 480px) {
+      .block-social {
+        flex-direction: column; } }
+    .block-social-container {
+      padding: 0.5rem; }
+      .block-social-container i {
+        padding-left: 2rem; }
+      .block-social-container a {
+        color: white;
+        padding-right: 2rem; }
+      .block-social-container:hover {
+        background: var(--very-light);
+        border-radius: 5px;
+        color: var(--dark);
+        border: 1px solid var(--primary); }
+        .block-social-container:hover a {
+          color: var(--dark);
+          font-weight: 700; }
