--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -23,5 +23,5 @@
   border-bottom: 1px solid var(--hint);
   text-align: center;
   justify-content: center;
-
+  text-shadow: 1px 1px 2px var(--very-light);
 }
