--- a/scss/style.scss
+++ b/scss/style.scss
@@ -704,54 +704,38 @@ footer {
   }
 }
 
-aside .block .social-container {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  padding: 1rem 1rem;
-  padding-left:3rem;
-  font-weight: 300;
-  color:white;
-  border-radius: 5px;
-  transition: all 0.2s;
-  max-width: 200px;
-  cursor: pointer;
-  @include xs {
-    text-align: center;
-  }
-}
-  aside .block .social-container:hover {
-    background: var(--very-light);
-    font-weight: 700;
-    max-width:200px;
-  }
-  aside h2 {
-      padding-left: 5rem;
-      padding-top: 2rem;
-      padding-bottom: 0.8rem;
-      color:white;
-      @include xs {
-        text-align: center;
-        padding-left: 0;
+.block {
+  display:flex;
+  flex-direction:column;
+  text-align:center;
+  &-social {
+    display:flex;
+    flex-flow: row nowrap;
+    text-align:center;
+    align-items:center;
+    justify-content: center;
+    @include xs {
+      flex-direction:column;
+    }
+    &-container {
+      padding:0.5rem;
+      i {
+        padding-left:2rem;
+      }
+      a {
+        color:white;
+        padding-right:2rem;
+      }
+      &:hover {
+        background:var(--very-light);
+        border-radius:5px;
+        color:var(--dark);
+        border:1px solid var(--primary);
+        a {
+          color:var(--dark);
+          font-weight:700;
+        }
       }
     }
-  aside a {
-    color:white;
   }
-  aside a:hover {
-    color:var(--dark);
-  }
-  aside .block .social-container:hover i {
-      color:var(--dark);
-      transform: scale(1.3);
-      transition: 0.3s; 
-  }
-  aside .block .social-container i {
-    font-size: 2rem;
-    flex: 0 0 50px;
-    margin-right: 1rem; 
-  }
-  aside .block .social-container p {
-    flex: auto;
-    margin: 0; 
-  }
+}
