--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ img {
       height: 250px; } }
 
 .borderpack {
-  border: 3px solid black; }
+  border: 0.5px solid var(--dark); }
 
 /* Landscape phones and down */
 :root {
@@ -290,7 +290,7 @@ nav {
 
 /* PACK */
 .pack {
-  background: var(--very-light);
+  background: #fcdced;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -319,7 +319,7 @@ nav {
       flex-direction: column;
       margin-bottom: 0rem;
       align-items: center;
-      box-shadow: 0 18px 18px 0 var(--dark), 0 10px 25px 18px var(--light); }
+      box-shadow: 0 18px 18px 0 #ff69b9, 0 10px 25px 18px #ff9ed2; }
       .pack .pack-container .starter-list1 {
         display: flex;
         flex-flow: row nowrap;
