--- a/scss/style.scss
+++ b/scss/style.scss
@@ -202,7 +202,7 @@ nav {
 /* PACK */
 
 .pack {
-  background:var(--very-light);
+  background:rgb(252, 220, 237);
   display:flex;
   flex-direction:column;
   justify-content: center;
@@ -233,7 +233,7 @@ nav {
       flex-direction: column;
       margin-bottom:0rem;
       align-items: center;
-      box-shadow:0 18px 18px 0 var(--dark), 0 10px 25px 18px var(--light);
+      box-shadow:0 18px 18px 0 rgb(255, 105, 185), 0 10px 25px 18px rgb(255, 158, 210);
       &-list1 {
         display:flex;
         flex-flow:row nowrap;
