--- a/scss/_classes.scss
+++ b/scss/_classes.scss
@@ -17,10 +17,6 @@
   border-bottom: 1px solid black;
 }
 
-.gras {
-  font-weight: 700;
-}
-
 .espacedroite {
   margin-right: 2rem;
 }
@@ -60,6 +56,7 @@
 .fdepc {
   height:450px;
   width:100%;
+  border-bottom:1px solid black;
   @include xs {
     height:250px;
   }
