--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ nav {
 
 /* PACK */
 .pack {
-  background: #740000;
+  background: #5501b4;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -323,7 +323,7 @@ nav {
       flex-direction: column;
       margin-bottom: 0rem;
       align-items: center;
-      box-shadow: 0 18px 18px 0 #270000, 0 10px 25px 18px #520000; }
+      box-shadow: 0 18px 18px 0 #1e0027, 0 10px 25px 18px #66007a; }
       .pack .pack-container .starter-list1 {
         display: flex;
         flex-flow: row nowrap;
