--- a/scss/style.scss
+++ b/scss/style.scss
@@ -202,7 +202,7 @@ nav {
 /* PACK */
 
 .pack {
-  background:rgb(85, 1, 180);
+  background:var(--dark);
   display:flex;
   flex-direction:column;
   justify-content: center;
@@ -233,7 +233,7 @@ nav {
       flex-direction: column;
       margin-bottom:0rem;
       align-items: center;
-      box-shadow:0 18px 18px 0 rgb(30, 0, 39), 0 10px 25px 18px rgb(102, 0, 122);
+      box-shadow:0 18px 18px 0 rgb(30, 0, 39), 0 10px 25px 18px rgb(173, 0, 207);
       &-list1 {
         display:flex;
         flex-flow:row nowrap;
